# bunnylol

./: Cargo.toml  Dockerfile  README.md  package.json  pnpm-lock.yaml  tailwind.config.js
commands/: index.ts  type.ts
pages/: index.tsx  search.tsx
src/: command.rs  main.rs  web.rs
styles/: globals.css
