[package]
name = "bunnylol"
version = "0.1.0"
authors = ["Kyle Pfromer <kpfromer2@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
serde = { version = "1.0", features = ["derive"] }
dyn-clone = "1.0.4"
urlencoding = "1.3.3"